added attendance.html, still needs lots of work.
Table needs formatting and links to students page. Need to find a way to
select a class and have a different table appear without javascript.

--- a/Project/stylesheet.css
+++ b/Project/stylesheet.css
@@ -128,3 +128,8 @@ li {
 	color:red;
 }
 
+
+.attendanceContainer{width: 50%; height: auto; margin: 0 auto; padding: 30px; color:#000;}
+.attendanceContainer table,td,th {border: 1px solid black;}
+.attendanceContainer table {width: 100%;}
+.attendanceContainer th {height: 50px;}
