--- a/Project/stylesheet.css
+++ b/Project/stylesheet.css
@@ -42,6 +42,9 @@ a:link{
 	height: 90px;
 	background-color: #6285C7;
 	box-shadow: 0px 0px 1px 0px #404040;
+	/*background-image:url('img.jpg');
+	background-repeat:no-repeat;
+	background-position:center;*/
 }
 #navbar {
 	width: 100%;
