--- a/Project/stylesheet.css
+++ b/Project/stylesheet.css
@@ -136,3 +136,47 @@ li {
 .attendanceContainer table,td,th {border: 1px solid black; border-collapse: collapse; background-color: #F0F0F0;}
 .attendanceContainer table {width: 100%;}
 .attendanceContainer th {height: 50px;}
+
+
+#contentK 
+	{
+
+	height: 100%;
+
+	width: 80%;
+
+	margin: auto;
+
+	padding: 20px 20px 20px 20px;
+
+	background-color: #526C85;
+
+	box-shadow: 0px 5px 20px 0px #404040;
+
+	
+
+	}
+
+.listK
+	{
+	list-style-type: none;
+	margin: 10px 10px 10px 10px;
+	}
+.titleK
+	{
+	margin: 30%;
+	font-size: 28px;
+
+	text-decoration: underline;
+	}
+.tableK
+	{
+	margin-left:20%;
+	}
+
+.text_box_K
+	{
+	background-color: #9CC7F2;
+	}
+
+
