--- a/Project/stylesheet.css
+++ b/Project/stylesheet.css
@@ -31,6 +31,7 @@ a:link{
 #container {
 	width: 80%;
 	min-width: 700px;
+	max-width: 1138px;
 	margin: auto;
 	background-color: #9CC7F2;
 	box-shadow: 0px 0px 30px 0px #404040;
@@ -39,12 +40,12 @@ a:link{
 }
 #banner {
 	width: 100%;
-	height: 90px;
+	height: 200px;
 	background-color: #6285C7;
 	box-shadow: 0px 0px 1px 0px #404040;
-	/*background-image:url('img.jpg');
+	background-image:url('banner-image.png');
 	background-repeat:no-repeat;
-	background-position:center;*/
+	background-position:center;
 }
 #navbar {
 	width: 100%;
@@ -91,6 +92,7 @@ a:link{
 	padding: 2px 10px 2px 10px;
 	background-color: #AA9977;
 	box-shadow: 0px 0px .5px 0px #404040;
+	color: #ffffff;
 }
 .error {
 	color: #fe2222;
@@ -137,42 +139,17 @@ li {
 .attendanceContainer table {width: 100%;}
 .attendanceContainer th {height: 50px;}
 
-
-#contentK 
-	{
-
-	height: 100%;
-
-	width: 80%;
-
-	margin: auto;
-
-	padding: 20px 20px 20px 20px;
-
-	background-color: #526C85;
-
-	box-shadow: 0px 5px 20px 0px #404040;
-
-	}
-
+ul {
+	text-align: left;
+}
 .listK
 	{
 	list-style-type: none;
 	margin: 10px 10px 10px 10px;
 	}
-.titleK
-	{
-	margin: 30%;
-	font-size: 28px;
-
-	text-decoration: underline;
-	}
 .tableK
 	{
-	margin-left:20%;
-	}
-.tableK table
-	{
+	width: 330px;
 	color: #526C85;
 	}
 .tableK a
