--- a/Project/stylesheet.css
+++ b/Project/stylesheet.css
@@ -1,31 +1,31 @@
 body {
 	height: 100vh;
 	margin: 0;
-	background-color: #f0f0f0;
+	background-color: #FFE15A;
 	font-family: 'Helvetica', Arial, sans-serif;
 	font-size: 16px;
-	color: #D0E8F4;
+	color: #FFF;
 }
 ::selection {
-	background-color: #D0E8F4;
-	color: #526C85; 
+	background-color: #192061;
+	color: #FFF; 
 }
 a {
 	padding: 10px;
 	text-decoration: none;
-	color: #ffffff;
+	color: #FFF;
 }
 a:link{
-	color: #ffffff;
+	color: #FFF;
 }
 .nav:hover a {
-	background-color: #D0E8F4;
-	color: #526C85;
+	background-color: #C67E2A;
+	color: #FFF;
 	box-shadow: 0px 0px 5px 0px #404040;
 }
 .button:hover {
-	background-color: #D0E8F4;
-	color: #526C85;
+	background-color: #6876B3;
+	color: #FFF;
 	box-shadow: 0px 0px 5px 0px #404040;
 }
 #container {
@@ -33,7 +33,7 @@ a:link{
 	min-width: 700px;
 	max-width: 1138px;
 	margin: auto;
-	background-color: #9CC7F2;
+	background-color: #6876B3;
 	box-shadow: 0px 0px 30px 0px #404040;
 	height: auto;
 	min-height: 100vh;
@@ -50,7 +50,7 @@ a:link{
 #navbar {
 	width: 100%;
 	height: 50px;
-	background-color: #AA9977;
+	background-color: #542F0C;
 	box-shadow: 0px 0px 1px 0px #404040;
 	font-size: 24px;
 }
@@ -67,7 +67,7 @@ a:link{
 	width: 330px;
 	margin: auto;
 	padding: 20px;
-	background-color: #526C85;
+	background-color: #484E72;
 	box-shadow: 0px 5px 20px 0px #404040;
 	text-align: center;
 }
@@ -90,9 +90,9 @@ a:link{
 }
 .button {
 	padding: 2px 10px 2px 10px;
-	background-color: #AA9977;
+	background-color: #542F0C;
 	box-shadow: 0px 0px .5px 0px #404040;
-	color: #ffffff;
+	color: #FFF;
 }
 .error {
 	color: #fe2222;
@@ -112,8 +112,8 @@ h3.subsection {
 }
 
 .home_item {
-	background-color:white;
-	color: #526C85;
+	background-color: #F0F0F0;
+	color: #484E72;
 	text-align:left;
 	margin-bottom: 5px;
 	padding: 10px;
@@ -134,7 +134,7 @@ li {
 }
 
 
-.attendanceContainer{width: 80%; height: auto; margin: auto; padding: 30px; color:#526C85;}
+.attendanceContainer{width: 80%; height: auto; margin: auto; padding: 30px; color:#484E72;}
 .attendanceContainer table,td,th {border: 1px solid black; border-collapse: collapse; background-color: #F0F0F0;}
 .attendanceContainer table {width: 100%;}
 .attendanceContainer th {height: 50px;}
@@ -150,15 +150,16 @@ ul {
 .tableK
 	{
 	width: 330px;
-	color: #526C85;
+	color: #484E72;
 	}
 .tableK a
 	{
-	color: #6285C7;
+	color: #DD7900;
 	}
 .text_box_K
 	{
-	background-color: #9CC7F2;
+	background-color: #FFE15A;
+	color: #484E72;
 	}
 
 
