Rough admin home page
Just create a quick layout of the admin home page

--- a/Project/stylesheet.css
+++ b/Project/stylesheet.css
@@ -192,4 +192,14 @@ ul {
 		margin-left: 1em;
 }
 
+.home_button {
+	background-color: #192061;
+	display:inline;
+	border:2px solid grey;
+	font-size: 16px;
+}
+
+.home_button :hover{
+	background-color: #121212;
+}
 
