--- a/Project/stylesheet.css
+++ b/Project/stylesheet.css
@@ -202,9 +202,10 @@ ul {
 	display:inline;
 	border:2px solid grey;
 	font-size: 16px;
+	padding: 10px 0 10px 0;
 }
 
 .home_button :hover{
-	background-color: #121212;
+	background-color: #C67E2A;
 }
 
