--- a/InfiniteLoopGoogleApp/war/css/stylesheet.css
+++ b/InfiniteLoopGoogleApp/war/css/stylesheet.css
@@ -43,7 +43,7 @@ a:link{
 	height: 200px;
 	background-color: #6285C7;
 	box-shadow: 0px 0px 1px 0px #404040;
-	background-image:url('banner-image.png');
+	background-image:url('/images/banner-image.png');
 	background-repeat:no-repeat;
 	background-position:center;
 }
