Student Charges Updated
- Created an array of charges for test information
- Made arrays for the amount and the deadline and set them to the
appropriate values
- Added a new column for the deadline
- Print the deadlines in input boxes
- User entity now has a setter and getter for charges
- Some stylehseet modification

--- a/InfiniteLoopGoogleApp/war/css/stylesheet.css
+++ b/InfiniteLoopGoogleApp/war/css/stylesheet.css
@@ -214,5 +214,7 @@ ul {
 .chargesContainer table {width: 100%;}
 .chargesContainer th {height: 50px;}
 .chargesContainer a {color: #DD7900;}
-.chargesContainer input {text-align: center;}
+.chargesContainer input {text-align: center; height: 10px;}
+.chargesContainer .charge_input {width: 50px;}
+.chargesContainer .charge_due {width: 70px;}
 
