Fixed error with studentCharges.jsp
- studentCharges.jsp crashed if you would navigate to the page more than
once. A counter would not reset each time and so null pointer business
- index.html, admin_header.html now link to studentCharges.jsp
- minor tweaks to StudentCharges Servlet. Still can't figure out how to
get it to post properly.

--- a/InfiniteLoopGoogleApp/war/templates/admin_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/admin_header.html
@@ -11,6 +11,6 @@
 					<div class='nav'><a href=''>Home</a></div>
 					<div class='nav'><a href=''>Create Class</a></div>
 					<div class='nav'><a href='createInstructor.jsp'>Create Instructor</a></div>
-					<div class='nav'><a href='/studentCharges'>Student Charges</a></div>
+					<div class='nav'><a href='studentCharges.jsp'>Student Charges</a></div>
 					<div id='login' class='nav'><a href='/login'>Log Out</a></div>
 				</div>
