login/logout and cookies

--- a/InfiniteLoopGoogleApp/war/templates/student_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/student_header.html
@@ -10,5 +10,5 @@
 				<div id='navbar'>
 					<div class='nav'><a href='student_home.html'>Home</a></div>
 					<div class='nav'><a href='achievements.html'>Achievements</a></div>
-				<div id='login' class='nav'><a href='/login'>Log Out</a></div>
+				<div id='login' class='nav'><a href='/logout'>Log Out</a></div>
 			</div>
