--- a/InfiniteLoopGoogleApp/war/templates/teacher_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/teacher_header.html
@@ -12,5 +12,5 @@
 					<div class='nav'><a href=''>Attendance</a></div>
 					<div class='nav'><a href=''>Awards</a></div>
 					<div class='nav'><a href=''>Register Student</a></div>
-					<div id='login' class='nav'><a href='/login'>Log Out</a></div>
+					<div id='login' class='nav'><a href='/logout'>Log Out</a></div>
 				</div>
