--- a/InfiniteLoopGoogleApp/war/templates/admin_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/admin_header.html
@@ -8,9 +8,9 @@
 			<div id='container'>
 				<div id='banner'></div>
 				<div id='navbar'>
-					<div class='nav'><a href=''>Home</a></div>
+					<div class='nav'><a href='/AdminHome'>Home</a></div>
 					<div class='nav'><a href=''>Create Class</a></div>
 					<div class='nav'><a href='createInstructor.jsp'>Create Instructor</a></div>
 					<div class='nav'><a href='studentCharges.jsp'>Student Charges</a></div>
-					<div id='login' class='nav'><a href='/login'>Log Out</a></div>
+					<div id='login' class='nav'><a href='/logout'>Log Out</a></div>
 				</div>
