--- a/InfiniteLoopGoogleApp/war/css/stylesheet.css
+++ b/InfiniteLoopGoogleApp/war/css/stylesheet.css
@@ -97,10 +97,12 @@ a:link{
 .error {
 	color: #fe2222;
 	font-size: 20px;
+	text-align: center
 }
 .success {
 	color: #22cc22;
 	font-size: 20px;
+	text-align: center;
 }
 
 .subsection {
