--- a/InfiniteLoopGoogleApp/war/templates/admin_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/admin_header.html
@@ -11,6 +11,6 @@
 					<div class='nav'><a href='AdminHome.jsp'>Home</a></div>
 					<div class='nav'><a href=/createClass'>Create Class</a></div>
 					<div class='nav'><a href='createInstructor.jsp'>Create Instructor</a></div>
-					<div class='nav'><a href='studentCharges.jsp'>Student Charges</a></div>
+					<div class='nav'><a href='StudentChargesServlet'>Student Charges</a></div>
 					<div id='login' class='nav'><a href='/logout'>Log Out</a></div>
 				</div>
