Fixed error with createClass navbar link

--- a/InfiniteLoopGoogleApp/war/templates/admin_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/admin_header.html
@@ -9,7 +9,7 @@
 				<div id='banner'></div>
 				<div id='navbar'>
 					<div class='nav'><a href='AdminHome.jsp'>Home</a></div>
-					<div class='nav'><a href=/createClass'>Create Class</a></div>
+					<div class='nav'><a href='/createClass'>Create Class</a></div>
 					<div class='nav'><a href='createInstructor.jsp'>Create Instructor</a></div>
 					<div class='nav'><a href='StudentChargesServlet'>Student Charges</a></div>
 					<div id='login' class='nav'><a href='/logout'>Log Out</a></div>
