--- a/InfiniteLoopGoogleApp/war/templates/student_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/student_header.html
@@ -8,7 +8,6 @@
 			<div id='container'>
 				<div id='banner'></div>
 				<div id='navbar'>
-					<div class='nav'><a href='student_home.html'>Home</a></div>
-					<div class='nav'><a href='achievements.html'>Achievements</a></div>
+					<div class='nav'><a href='StudentHome'>Home</a></div>
 				<div id='login' class='nav'><a href='/logout'>Log Out</a></div>
 			</div>
