Register Student page work
-Created a register students page for Teachers
-doPost does not work currently. It for some reason is calling
CreateInstructorServlet and null pointing out. I am pretty sure I mapped
everything properly, nothing seems off

--- a/InfiniteLoopGoogleApp/war/templates/teacher_header.html
+++ b/InfiniteLoopGoogleApp/war/templates/teacher_header.html
@@ -11,6 +11,6 @@
 					<div class='nav'><a href=''>Home</a></div>
 					<div class='nav'><a href=''>Attendance</a></div>
 					<div class='nav'><a href=''>Awards</a></div>
-					<div class='nav'><a href='createStudent.jsp'>Register Student</a></div>
+					<div class='nav'><a href='/RegisterStudentServlet'>Register Student</a></div>
 					<div id='login' class='nav'><a href='/logout'>Log Out</a></div>
 				</div>
