error.html uses spans instead of ul
-Looks nicer

--- a/InfiniteLoopGoogleApp/war/templates/error.html
+++ b/InfiniteLoopGoogleApp/war/templates/error.html
@@ -1,11 +1,10 @@
-<ul>
-  	<c:choose>
-	      <c:when test="${fn:length(errors) == 0}">
-	      </c:when>
-	      <c:otherwise>
-   			<c:forEach items="${errors}" var="error">
-     			<li class="error"><c:out value="${error}"/></li>
-  			</c:forEach>
-	      </c:otherwise>
-	</c:choose>
-</ul>
+<c:choose>
+	<c:when test="${fn:length(errors) == 0}">
+	</c:when>
+	<c:otherwise>
+		<c:forEach items="${errors}" var="error">
+			<span class="error"><c:out value="${error}" /></span>
+			<br />
+		</c:forEach>
+	</c:otherwise>
+</c:choose>
